Fixed spacing

--- a/src/pages/landingPage/LandingPage.scss
+++ b/src/pages/landingPage/LandingPage.scss
@@ -9,9 +9,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 5em;
-        padding: 3em 0;
+        width: 95%;
         max-width: 1350px;
+        gap: 5em;
+        margin: 0 auto;
+        padding: 5em 0;
     }
 
     .landing-title {
@@ -28,7 +30,7 @@
         text-align: center;
         line-height: 1.6;
         padding: 0;
-        margin: 0 0 3rem 0;
+        margin: 0 0 4rem 0;
     }
 
     .hero-image {
@@ -41,15 +43,17 @@
 }
 
 @media(min-width: 900px) {
-
     .landing-page {
         .landing-container {
             flex-direction: row;
-            gap: 1em;
             justify-content: space-between;
             width: 80%;
+            gap: 1em;
             padding: 7em 0;
-            margin: 0 auto;
+        }
+
+        .landing-subtitle {
+            margin-bottom: 3em;
         }
 
         .hero-image {
@@ -57,7 +61,6 @@
             margin-top: -5em;
         }
     }
-
 }
 
 @media(min-width: 1000px) {
