--- a/src/pages/location/list/LocationListItem.scss
+++ b/src/pages/location/list/LocationListItem.scss
@@ -1,10 +1,9 @@
 .location-list-item {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     border-radius: 5px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.15);
-    margin-bottom: 1.5em;
-    justify-content: flex-start;
     background: var(--clr-bg-light);
 
     .location-list-item-image {
