--- a/src/pages/species/list/Species.scss
+++ b/src/pages/species/list/Species.scss
@@ -12,9 +12,9 @@
 
     .item-grid {
         display: grid;
-        gap: 1em 2em;
+        gap: 2em;
         width: 100%;
-        margin-top: 3em;
+        margin: 3em 0 5em;
     }
 }
 
