--- a/src/pages/species/list/SpeciesListItem.scss
+++ b/src/pages/species/list/SpeciesListItem.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     border-radius: 5px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.15);
-    margin-bottom: 1.5em;
     justify-content: flex-start;
     background: var(--clr-bg-light);
     max-height: 400px;
